1.8.8
-----
1. Fix crash when opening style config dialog whilst kwin config dialog is 
   open.

1.8.7
-----
1. Fix QtDesigner crash when using transparent background - thanks to
   Friedemann Kleint.
2. When installing background images, need to remove and previous files
   first (as QFile::copy will not overwrite files)
3. Fix incorrent window-drag trigger when dragging dock widget title
   widgets (set via QDockWidget::setTitleBarWidget() )

1.8.6
-----
1. Fix potential crash when using translucency and the raster engine.
   (Fix taken from oxygen-transparent)
2. Fix crash when changing QtCurve settings - handle free'ing of colours
   better.

1.8.5
-----
1. Fix fill of bottom corners of kwin decoration when not compositing.
2. Fix sunken left background of kwin decoration when not compositing.
3. Don't force toolbar icons to be square.
4. Fix drag issue with MusicScore.
5. Don't use gradient alpha settings for tooltips.
6. Don't do rounded/semi-transparent tooltips for opera.

1.8.4
-----
1. Fix saving of custom alpha values.
2. Fix crash upon exit - due to double free.

1.8.3
-----
1. Fix import of ZIP qtcurve files.
2. Fix display of background images, etc, in embedded preview.
3. Fix QMake compile - thanks, once again, to Hugues Delorme.

1.8.2
-----
 1. When hiding shortcuts, only show these if widget is enabled.
 2. Don't draw titlebar button frame for menu button if this is where the
    window icon is to be. This was already the case for circular buttons,
    but not for square buttons.
 3. If drawing sunken background behind titlebar buttons, need to reduce size
    of square buttons. This already happens for circular buttons.
 4. Don't draw sunken background around icon based menu button, if it is the
    only button on the left/right.
 5. Draw menubar and statusbar kwin toggle buttons square if using square
    titlebar buttons.
 6. Draw box around checked Libre/Open Office menu checkboxes.
 7. Ukrainian translation - thanks to Yuri Chornoivan